cmake_minimum_required(VERSION 3.10)

if (WIN32)
    add_subdirectory("pil")
    add_subdirectory("wping")
    add_subdirectory("mailslot")
    add_subdirectory("udp_exchange_client")
    add_subdirectory("udp_exchange_server")
    add_subdirectory("simple_client")
    add_subdirectory("tcp_server")
    add_subdirectory("service_base")
endif()
