cmake_minimum_required(VERSION 3.10)

if (UNIX)
    add_subdirectory("lwip_example")
    add_subdirectory("microhttpd-example")
    add_subdirectory("libhttpserver-example")
    add_subdirectory("cpp-httplib-example")
    add_subdirectory("curl-download-example")
    add_subdirectory("curl-post-example")
    add_subdirectory("restbed-example")
#    add_subdirectory("cppserver-example")
    add_subdirectory("lithium-example")
    add_subdirectory("llhttp-example")
    add_subdirectory("oatpp-example")
    add_subdirectory("webtoolkit-example")
    add_subdirectory("sdl-get")
endif()
