cmake_minimum_required(VERSION 3.10)

if (UNIX)
    add_subdirectory("qt-wordcount")
    add_subdirectory("libtorrent")
    add_subdirectory("openmpi_example")
    add_subdirectory("boost_mpi_example")
    add_subdirectory("simple_blockchain")
    add_subdirectory("mr4c")
#    add_subdirectory("libp2p")
endif()
