cmake_minimum_required(VERSION 3.10)

if (UNIX)
    add_subdirectory("epoll_example")
    add_subdirectory("libevent_echo_server")
    add_subdirectory("libevpp_echo_server")
    add_subdirectory("libuv_echo_server")
    add_subdirectory("asio_buffers")
    add_subdirectory("asio_sync_server")
    add_subdirectory("asio_simple_async_server")
    add_subdirectory("asio_server")
    add_subdirectory("aio_example")
    add_subdirectory("getaddrinfo_a_resolver")
    add_subdirectory("c_ares_example")
    add_subdirectory("asio_resolver")
    add_subdirectory("select_aio_server")
    add_subdirectory("ioring_server")
elseif(WIN32)
    # add_subdirectory("iocp_server")
endif()
