# To run examples use: cargo run --example <name>
# cargo run --example simple-http-server
# cargo run --example tokio-http-server
# cargo run --example echo

[package]
name = "rust-examples"
version = "0.0.0"
publish = false
edition = "2021"

# If you copy one of the examples into a new project, you should be using
# [dependencies] instead, and delete the **path**.
[dev-dependencies]
tokio = { version = "1.0.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.0", features = ["full"] }
tokio-stream = { version = "0.1" }

tracing = "0.1"
tracing-subscriber = { version = "0.3.1", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }
bytes = "1.0.0"
futures = { version = "0.3.0", features = ["thread-pool"]}
http = "0.2"

[target.'cfg(windows)'.dev-dependencies.windows-sys]
version = "0.48"

[[example]]
name = "simple-http-server"
path = "simple-http-server.rs"

[[example]]
name = "tokio-http-server"
path = "tokio-http-server.rs"

[[example]]
name = "echo"
path = "echo.rs"
